added margin auto

--- a/Pricings.html
+++ b/Pricings.html
@@ -65,28 +65,28 @@
         <div class="col-12-xs col-4-xl">
           <div class="card-white b-rad-sm p-2 text-center">
             <p class="card__title fw-xxl text-primary">Starter Pack</p>
-            <img src="/img/starter-pack.png" />
+            <img src="img/starter-pack.png" />
             <p>All the basics for businesses that are just getting started.</p>
 
             <h2 class="text-secondary-light-2 font-xl">
               $12 <span class="text-black font-sm">/month</span>
             </h2>
             <hr />
-            <div class="display-f flex-column mb-5">
-              <div class="display-f align-center mt-2 ml-3">
+            <div class="display-f flex-column margin-auto mb-4">
+              <div class="display-f align-cente">
                 <i class="fa-solid fa-circle-check mr-1 text-green"></i>
                 <label>Single project use</label>
               </div>
-              <div class="display-f align-center mt-2 ml-3">
+              <div class="display-f align-center">
                 <i class="fa-solid fa-circle-check mr-1 text-green"></i>
                 <label>Basic Dashboard</label>
               </div>
-              <div class="display-f align-center mt-2 ml-3">
+              <div class="display-f align-center">
                 <i class="fa-solid fa-circle-check mr-1 text-green"></i>
                 <label>All components included</label>
               </div>
             </div>
-            <button class="btn-secondary text-white pl-5 pr-5 font-sm b-rad-xs">
+            <button class="btn-secondary text-white font-sm b-rad-xs">
               Get Started
             </button>
           </div>
@@ -94,7 +94,7 @@
         <div class="col-12-xs col-4-xl">
           <div class="card-white b-rad-sm p-2 text-center">
             <p class="card__title fw-xxl text-primary">Standard Pack</p>
-            <img src="/img/standard-pack.png" />
+            <img src="img/standard-pack.png" />
             <p>Better for growing businesses that want more customers.</p>
 
             <h2 class="text-error-light-2 font-xl">
@@ -102,24 +102,24 @@
             </h2>
             <hr />
             <div class="display-f flex-column mb-3">
-              <div class="display-f align-center mt-2 ml-3">
+              <div class="display-f align-center">
                 <i class="fa-solid fa-circle-check mr-1 text-green"></i>
                 <label>Unlimited project use</label>
               </div>
-              <div class="display-f align-center mt-2 ml-3">
+              <div class="display-f align-center">
                 <i class="fa-solid fa-circle-check mr-1 text-green"></i>
                 <label>Advanced Dashboard</label>
               </div>
-              <div class="display-f align-center mt-2 ml-3">
+              <div class="display-f align-center">
                 <i class="fa-solid fa-circle-check mr-1 text-green"></i>
                 <label>All components included</label>
               </div>
-              <div class="display-f align-center mt-2 ml-3">
+              <div class="display-f align-center">
                 <i class="fa-solid fa-circle-check mr-1 text-green"></i>
                 <label>Advanced Insight</label>
               </div>
             </div>
-            <button class="btn-secondary text-white pl-5 pr-5 font-sm b-rad-xs">
+            <button class="btn-secondary text-white font-sm b-rad-xs">
               Get Started
             </button>
           </div>
@@ -127,7 +127,7 @@
         <div class="col-12-xs col-4-xl">
           <div class="card-white b-rad-sm p-2 text-center">
             <p class="card__title fw-xxl text-primary">Enterprise Pack</p>
-            <img src="/img/enterprise-pack.png" />
+            <img src="img/enterprise-pack.png" />
             <p>Advanced features for pros who need more customization</p>
 
             <h2 class="text-green-light-1 font-xl">
@@ -135,24 +135,24 @@
             </h2>
             <hr />
             <div class="display-f flex-column mb-3">
-              <div class="display-f align-center mt-2 ml-3">
+              <div class="display-f align-center">
                 <i class="fa-solid fa-circle-check mr-1 text-green"></i>
                 <label>Unlimited project use</label>
               </div>
-              <div class="display-f align-center mt-2 ml-3">
+              <div class="display-f align-center">
                 <i class="fa-solid fa-circle-check mr-1 text-green"></i>
                 <label>Advanced Dashboard</label>
               </div>
-              <div class="display-f align-center mt-2 ml-3">
+              <div class="display-f align-center">
                 <i class="fa-solid fa-circle-check mr-1 text-green"></i>
                 <label>Multivariate Components</label>
               </div>
-              <div class="display-f align-center mt-2 ml-3">
+              <div class="display-f align-center">
                 <i class="fa-solid fa-circle-check mr-1 text-green"></i>
                 <label>Phone Support</label>
               </div>
             </div>
-            <button class="btn-secondary text-white pl-5 pr-5 font-sm b-rad-xs">
+            <button class="btn-secondary text-white font-sm b-rad-xs">
               Get Started
             </button>
           </div>
