fix margin auto pricing

--- a/Pricings.html
+++ b/Pricings.html
@@ -72,18 +72,27 @@
               $12 <span class="text-black font-sm">/month</span>
             </h2>
             <hr />
-            <div class="display-f flex-column margin-auto mb-4">
-              <div class="display-f align-cente">
-                <i class="fa-solid fa-circle-check mr-1 text-green"></i>
-                <label>Single project use</label>
+            <div class="margin-auto mx-width-200 mb-4">
+              <div class="display-f align-center col-gap-2">
+                <span
+                  ><i class="fa-solid fa-circle-check mr-1 text-green"></i
+                ></span>
+
+                <p>Single project use</p>
               </div>
-              <div class="display-f align-center">
-                <i class="fa-solid fa-circle-check mr-1 text-green"></i>
-                <label>Basic Dashboard</label>
+              <div class="display-f align-center col-gap-2">
+                <span
+                  ><i class="fa-solid fa-circle-check mr-1 text-green"></i
+                ></span>
+
+                <p>Single project use</p>
               </div>
-              <div class="display-f align-center">
-                <i class="fa-solid fa-circle-check mr-1 text-green"></i>
-                <label>All components included</label>
+              <div class="display-f align-center col-gap-2">
+                <span
+                  ><i class="fa-solid fa-circle-check mr-1 text-green"></i
+                ></span>
+
+                <p>Single project use</p>
               </div>
             </div>
             <button class="btn-secondary text-white font-sm b-rad-xs">
@@ -101,22 +110,34 @@
               $84 <span class="text-black font-sm">/month</span>
             </h2>
             <hr />
-            <div class="display-f flex-column mb-3">
-              <div class="display-f align-center">
-                <i class="fa-solid fa-circle-check mr-1 text-green"></i>
-                <label>Unlimited project use</label>
+            <div class="margin-auto mx-width-200 mb-4">
+              <div class="display-f align-center col-gap-2">
+                <span
+                  ><i class="fa-solid fa-circle-check mr-1 text-green"></i
+                ></span>
+
+                <p>Single project use</p>
               </div>
-              <div class="display-f align-center">
-                <i class="fa-solid fa-circle-check mr-1 text-green"></i>
-                <label>Advanced Dashboard</label>
+              <div class="display-f align-center col-gap-2">
+                <span
+                  ><i class="fa-solid fa-circle-check mr-1 text-green"></i
+                ></span>
+
+                <p>Single project use</p>
               </div>
-              <div class="display-f align-center">
-                <i class="fa-solid fa-circle-check mr-1 text-green"></i>
-                <label>All components included</label>
+              <div class="display-f align-center col-gap-2">
+                <span
+                  ><i class="fa-solid fa-circle-check mr-1 text-green"></i
+                ></span>
+
+                <p>Single project use</p>
               </div>
-              <div class="display-f align-center">
-                <i class="fa-solid fa-circle-check mr-1 text-green"></i>
-                <label>Advanced Insight</label>
+              <div class="display-f align-center col-gap-2">
+                <span
+                  ><i class="fa-solid fa-circle-check mr-1 text-green"></i
+                ></span>
+
+                <p>Single project use</p>
               </div>
             </div>
             <button class="btn-secondary text-white font-sm b-rad-xs">
@@ -134,22 +155,34 @@
               $316 <span class="text-black font-sm">/month</span>
             </h2>
             <hr />
-            <div class="display-f flex-column mb-3">
-              <div class="display-f align-center">
-                <i class="fa-solid fa-circle-check mr-1 text-green"></i>
-                <label>Unlimited project use</label>
+            <div class="margin-auto mx-width-200 mb-4">
+              <div class="display-f align-center col-gap-2">
+                <span
+                  ><i class="fa-solid fa-circle-check mr-1 text-green"></i
+                ></span>
+
+                <p>Single project use</p>
               </div>
-              <div class="display-f align-center">
-                <i class="fa-solid fa-circle-check mr-1 text-green"></i>
-                <label>Advanced Dashboard</label>
+              <div class="display-f align-center col-gap-2">
+                <span
+                  ><i class="fa-solid fa-circle-check mr-1 text-green"></i
+                ></span>
+
+                <p>Single project use</p>
               </div>
-              <div class="display-f align-center">
-                <i class="fa-solid fa-circle-check mr-1 text-green"></i>
-                <label>Multivariate Components</label>
+              <div class="display-f align-center col-gap-2">
+                <span
+                  ><i class="fa-solid fa-circle-check mr-1 text-green"></i
+                ></span>
+
+                <p>Single project use</p>
               </div>
-              <div class="display-f align-center">
-                <i class="fa-solid fa-circle-check mr-1 text-green"></i>
-                <label>Phone Support</label>
+              <div class="display-f align-center col-gap-2">
+                <span
+                  ><i class="fa-solid fa-circle-check mr-1 text-green"></i
+                ></span>
+
+                <p>Single project use</p>
               </div>
             </div>
             <button class="btn-secondary text-white font-sm b-rad-xs">
