fix the pricing-table

--- a/Pricings.html
+++ b/Pricings.html
@@ -61,38 +61,46 @@
     </div>
 
     <div class="container mt-2">
-      <div class="row gap-3 p-2">
+      <div class="row gap-2 p-2">
         <div class="col-12-xs col-4-xl">
-          <div class="card-white b-rad-sm p-2 text-center">
-            <p class="card__title fw-xxl text-primary">Starter Pack</p>
-            <img src="img/starter-pack.png" />
-            <p>All the basics for businesses that are just getting started.</p>
+          <div
+            class="card-white b-rad-sm p-2 text-center display-f flex-column justify-space-between row-gap-2"
+          >
+            <div class="display-f flex-column">
+              <p class="card__title fw-xxl text-primary">Starter Pack</p>
+              <img src="img/starter-pack.png" />
+              <p>
+                All the basics for businesses that are just getting started.
+              </p>
 
-            <h2 class="text-secondary-light-2 font-xl">
-              $12 <span class="text-black font-sm">/month</span>
-            </h2>
-            <hr />
-            <div class="margin-auto mx-width-200 mb-4">
+              <h2 class="mb-0 text-secondary-light-2 font-xl">
+                $12 <span class="text-black font-sm">/month</span>
+                <hr />
+              </h2>
+            </div>
+
+            <div class="margin-auto mx-width-200 mb-2">
               <div class="display-f align-center col-gap-2">
-                <span
-                  ><i class="fa-solid fa-circle-check mr-1 text-green"></i
-                ></span>
+                <span><i class="fa-solid fa-circle-check text-green"></i></span>
 
                 <p>Single project use</p>
               </div>
               <div class="display-f align-center col-gap-2">
-                <span
-                  ><i class="fa-solid fa-circle-check mr-1 text-green"></i
-                ></span>
+                <span><i class="fa-solid fa-circle-check text-green"></i></span>
 
-                <p>Single project use</p>
+                <p>Basic dashboard</p>
+              </div>
+              <div class="display-f align-center col-gap-2">
+                <span><i class="fa-solid fa-circle-check text-green"></i></span>
+
+                <p class="ws-nowrap">All components included</p>
               </div>
               <div class="display-f align-center col-gap-2">
                 <span
-                  ><i class="fa-solid fa-circle-check mr-1 text-green"></i
+                  ><i class="fa-solid fa-circle-check text-tertiary"></i
                 ></span>
 
-                <p>Single project use</p>
+                <p>Unlimited Features</p>
               </div>
             </div>
             <button class="btn-secondary text-white font-sm b-rad-xs">
@@ -101,43 +109,40 @@
           </div>
         </div>
         <div class="col-12-xs col-4-xl">
-          <div class="card-white b-rad-sm p-2 text-center">
-            <p class="card__title fw-xxl text-primary">Standard Pack</p>
-            <img src="img/standard-pack.png" />
-            <p>Better for growing businesses that want more customers.</p>
+          <div
+            class="card-white b-rad-sm p-2 text-center display-f flex-column justify-space-between row-gap-2"
+          >
+            <div class="display-f flex-column">
+              <p class="card__title fw-xxl text-primary">Standard Pack</p>
+              <img src="img/starter-pack.png" />
+              <p>Better for growing business that want more customers.</p>
 
-            <h2 class="text-error-light-2 font-xl">
-              $84 <span class="text-black font-sm">/month</span>
-            </h2>
-            <hr />
-            <div class="margin-auto mx-width-200 mb-4">
+              <h2 class="mb-0 text-error-light-2 font-xl">
+                $84 <span class="text-black font-sm">/month</span>
+                <hr />
+              </h2>
+            </div>
+
+            <div class="margin-auto mx-width-200 mb-2">
               <div class="display-f align-center col-gap-2">
-                <span
-                  ><i class="fa-solid fa-circle-check mr-1 text-green"></i
-                ></span>
+                <span><i class="fa-solid fa-circle-check text-green"></i></span>
 
-                <p>Single project use</p>
+                <p>Unlimited project use</p>
               </div>
               <div class="display-f align-center col-gap-2">
-                <span
-                  ><i class="fa-solid fa-circle-check mr-1 text-green"></i
-                ></span>
+                <span><i class="fa-solid fa-circle-check text-green"></i></span>
 
-                <p>Single project use</p>
+                <p>Advanced dashboard</p>
               </div>
               <div class="display-f align-center col-gap-2">
-                <span
-                  ><i class="fa-solid fa-circle-check mr-1 text-green"></i
-                ></span>
+                <span><i class="fa-solid fa-circle-check text-green"></i></span>
 
-                <p>Single project use</p>
+                <p class="ws-nowrap">All components included</p>
               </div>
               <div class="display-f align-center col-gap-2">
-                <span
-                  ><i class="fa-solid fa-circle-check mr-1 text-green"></i
-                ></span>
+                <span><i class="fa-solid fa-circle-check text-green"></i></span>
 
-                <p>Single project use</p>
+                <p>Advanced insight</p>
               </div>
             </div>
             <button class="btn-secondary text-white font-sm b-rad-xs">
@@ -146,43 +151,40 @@
           </div>
         </div>
         <div class="col-12-xs col-4-xl">
-          <div class="card-white b-rad-sm p-2 text-center">
-            <p class="card__title fw-xxl text-primary">Enterprise Pack</p>
-            <img src="img/enterprise-pack.png" />
-            <p>Advanced features for pros who need more customization</p>
+          <div
+            class="card-white b-rad-sm p-2 text-center display-f flex-column justify-space-between row-gap-2"
+          >
+            <div class="display-f flex-column">
+              <p class="card__title fw-xxl text-primary">Enterprise Pack</p>
+              <img src="img/starter-pack.png" />
+              <p>Advanced features for pros who need more customization.</p>
 
-            <h2 class="text-green-light-1 font-xl">
-              $316 <span class="text-black font-sm">/month</span>
-            </h2>
-            <hr />
-            <div class="margin-auto mx-width-200 mb-4">
+              <h2 class="mb-0 text-green-light-2 font-xl">
+                $316 <span class="text-black font-sm">/month</span>
+                <hr />
+              </h2>
+            </div>
+
+            <div class="margin-auto mx-width-200 mb-2">
               <div class="display-f align-center col-gap-2">
-                <span
-                  ><i class="fa-solid fa-circle-check mr-1 text-green"></i
-                ></span>
+                <span><i class="fa-solid fa-circle-check text-green"></i></span>
 
-                <p>Single project use</p>
+                <p>Unlimited project use</p>
               </div>
               <div class="display-f align-center col-gap-2">
-                <span
-                  ><i class="fa-solid fa-circle-check mr-1 text-green"></i
-                ></span>
+                <span><i class="fa-solid fa-circle-check text-green"></i></span>
 
-                <p>Single project use</p>
+                <p>Advanced dashboard</p>
               </div>
               <div class="display-f align-center col-gap-2">
-                <span
-                  ><i class="fa-solid fa-circle-check mr-1 text-green"></i
-                ></span>
+                <span><i class="fa-solid fa-circle-check text-green"></i></span>
 
-                <p>Single project use</p>
+                <p class="ws-nowrap">Multivariate components</p>
               </div>
               <div class="display-f align-center col-gap-2">
-                <span
-                  ><i class="fa-solid fa-circle-check mr-1 text-green"></i
-                ></span>
+                <span><i class="fa-solid fa-circle-check text-green"></i></span>
 
-                <p>Single project use</p>
+                <p>Phone Support</p>
               </div>
             </div>
             <button class="btn-secondary text-white font-sm b-rad-xs">
@@ -193,7 +195,7 @@
       </div>
     </div>
 
-    <footer class="footer bg-white pt-2 pb-2">
+    <footer class="footer bg-white pt-2 mt-0 pb-2">
       <div class="container row col-gap-9 justify-space-between">
         <div class="col-12-sm col-2-lg">
           <h3>Startup 3</h3>
