added border-corners // edit price and tours images

--- a/Blogs.html
+++ b/Blogs.html
@@ -51,7 +51,7 @@
       <div class="text-white row gap-2">
         <div class="col-12-xs col-6-lg">
           <h4 class="font-sm fw-xxl">How Startup Framework works?</h4>
-          <p class="text-tertiary-light-6 leading-3">
+          <p class="text-tertiary-light-6 text-hover-white leading-3">
             The Generator App is an online tool that helps you to export
             ready-made templates ready to work as your future website. It helps
             you to combine slides, panels and other components and export it as
@@ -62,7 +62,7 @@
           <h4 class="font-sm fw-xxl">
             Do you provide hosting with Startup Framework?
           </h4>
-          <p class="text-tertiary-light-6 leading-3">
+          <p class="text-tertiary-light-6 text-hover-white leading-3">
             No, hosting is on you. You upload the result on your hosting via FTP
             or using other tools you like. You can use any server, just make
             sure it have a PHP installed in case if you need a contact form.
@@ -70,7 +70,7 @@
         </div>
         <div class="col-12-xs col-6-lg">
           <h4 class="font-sm fw-xxl">What exactly am I buying?</h4>
-          <p class="text-tertiary-light-6 leading-3">
+          <p class="text-tertiary-light-6 text-hover-white leading-3">
             You&#39;re buying an access to the Startup Generator app to export
             ready-made templates with the rest source files included. It&#39;s
             an online tool, not a software. For more details about
@@ -81,14 +81,14 @@
           <h4 class="font-sm fw-xxl">
             Are you planning to update Startup Framework?
           </h4>
-          <p class="text-tertiary-light-6 leading-3">
+          <p class="text-tertiary-light-6 text-hover-white leading-3">
             We are! Here is the changelog of changes we&#39;ve made after the
             release. Thanks our clients who helped us to improve our product.
           </p>
         </div>
         <div class="col-12-xs col-6-lg">
           <h4 class="font-sm fw-xxl">How Startup Framework works?</h4>
-          <p class="text-tertiary-light-6 leading-3">
+          <p class="text-tertiary-light-6 text-hover-white leading-3">
             The Generator App is an online tool that helps you to export
             ready-made templates ready to work as your future website. It helps
             you to combine slides, panels and other components and export it as
@@ -97,7 +97,7 @@
         </div>
         <div class="col-12-xs col-6-lg">
           <h4 class="font-sm fw-xxl">Do you provide support for customers?</h4>
-          <p class="text-tertiary-light-6 leading-3">
+          <p class="text-tertiary-light-6 text-hover-white leading-3">
             Yes, we are. Please use our contact us form to chat with us. We DO
             NOT provide product support via Facebook, Twitter or others sources.
           </p>
