--- a/Homepage.html
+++ b/Homepage.html
@@ -286,6 +286,144 @@
 
       <hr />
 
+      <!-- Border Top -->
+      <h2>Bordered Top</h2>
+
+      <span class="border-top-1-solid-primary">bordered-top-primary</span>
+      <br />
+      <br />
+      <span class="border-top-2-dotted-secondary">bordered-top-secondary</span>
+      <br />
+      <br />
+      <span class="border-top-3-dashed-tertiary">bordered-top-tertiary</span>
+      <br />
+      <br />
+      <span class="border-top-1-solid-info">bordered-top-info</span>
+      <br />
+      <br />
+      <span class="border-top-1-dotted-error">bordered-top-error</span>
+      <br />
+      <br />
+      <span class="border-top-2-solid-green">bordered-top-green</span>
+      <br />
+      <br />
+      <span class="border-top-3-dashed-tw">bordered-top-tw</span>
+      <br />
+      <br />
+      <span class="border-top-2-solid-fb">bordered-top-fb</span>
+      <br />
+      <br />
+      <span class="border-top-3-dotted-yt">bordered-top-yt</span>
+      <br />
+      <br />
+      <hr />
+
+      <!-- Border Left -->
+      <h2>Bordered Left</h2>
+
+      <span class="border-left-1-solid-primary">bordered-left-primary</span>
+      <br />
+      <br />
+      <span class="border-left-2-dotted-secondary"
+        >bordered-left-secondary</span
+      >
+      <br />
+      <br />
+      <span class="border-left-3-dashed-tertiary">bordered-left-tertiary</span>
+      <br />
+      <br />
+      <span class="border-left-1-solid-info">bordered-left-info</span>
+      <br />
+      <br />
+      <span class="border-left-1-dotted-error">bordered-left-error</span>
+      <br />
+      <br />
+      <span class="border-left-2-solid-green">bordered-left-green</span>
+      <br />
+      <br />
+      <span class="border-left-3-dashed-tw">bordered-left-tw</span>
+      <br />
+      <br />
+      <span class="border-left-2-solid-fb">bordered-left-fb</span>
+      <br />
+      <br />
+      <span class="border-left-3-dotted-yt">bordered-left-yt</span>
+      <br />
+      <br />
+      <hr />
+
+      <!-- Border Bottom -->
+      <h2>Bordered Bottom</h2>
+
+      <span class="border-bottom-1-solid-primary">bordered-bottom-primary</span>
+      <br />
+      <br />
+      <span class="border-bottom-2-dotted-secondary"
+        >bordered-bottom-secondary</span
+      >
+      <br />
+      <br />
+      <span class="border-bottom-3-dashed-tertiary"
+        >bordered-bottom-tertiary</span
+      >
+      <br />
+      <br />
+      <span class="border-bottom-1-solid-info">bordered-bottom-info</span>
+      <br />
+      <br />
+      <span class="border-bottom-1-dotted-error">bordered-bottom-error</span>
+      <br />
+      <br />
+      <span class="border-bottom-2-solid-green">bordered-bottom-green</span>
+      <br />
+      <br />
+      <span class="border-bottom-3-dashed-tw">bordered-bottom-tw</span>
+      <br />
+      <br />
+      <span class="border-bottom-2-solid-fb">bordered-bottom-fb</span>
+      <br />
+      <br />
+      <span class="border-bottom-3-dotted-yt">bordered-bottom-yt</span>
+      <br />
+      <br />
+      <hr />
+
+      <!-- Border Right -->
+      <h2>Bordered Right</h2>
+
+      <span class="border-right-1-solid-primary">bordered-right-primary</span>
+      <br />
+      <br />
+      <span class="border-right-2-dotted-secondary"
+        >bordered-right-secondary</span
+      >
+      <br />
+      <br />
+      <span class="border-right-3-dashed-tertiary"
+        >bordered-right-tertiary</span
+      >
+      <br />
+      <br />
+      <span class="border-right-1-solid-info">bordered-right-info</span>
+      <br />
+      <br />
+      <span class="border-right-1-dotted-error">bordered-right-error</span>
+      <br />
+      <br />
+      <span class="border-right-2-solid-green">bordered-right-green</span>
+      <br />
+      <br />
+      <span class="border-right-3-dashed-tw">bordered-right-tw</span>
+      <br />
+      <br />
+      <span class="border-right-2-solid-fb">bordered-right-fb</span>
+      <br />
+      <br />
+      <span class="border-right-3-dotted-yt">bordered-right-yt</span>
+      <br />
+      <br />
+      <hr />
+
       <!-- Font Sizes  -->
       <h2>Font Sizes</h2>
       <p class="font-xs">This is extra small font</p>
