--- a/Tour.html
+++ b/Tour.html
@@ -55,7 +55,7 @@
       <div class="row gap-2 p-2">
         <div class="col-12-xs col-6-md col-4-xl">
           <div class="card-white b-rad-sm p-2">
-            <img class="b-rad-sm" src="img/1.png" />
+            <img class="b-rad-sm tour-img" src="img/1.png" />
             <p class="card__title text-primary fw-lg">Quality you can trust</p>
             <p class="card__body text-tertiary">
               Startup Framework works fine on devices supporting Retina Display.
@@ -70,7 +70,7 @@
         </div>
         <div class="col-12-xs col-6-md col-4-xl">
           <div class="card-white b-rad-sm p-2">
-            <img class="b-rad-sm" src="img/2.png" />
+            <img class="b-rad-sm tour-img" src="img/2.png" />
             <p class="card__title text-primary fw-lg">Fast prototyping</p>
             <p class="card__body text-tertiary">
               Startup Framework works fine on devices supporting Retina Display.
@@ -85,7 +85,7 @@
         </div>
         <div class="col-12-xs col-6-md col-4-xl">
           <div class="card-white b-rad-sm p-2">
-            <img class="b-rad-sm" src="img/3.png" />
+            <img class="b-rad-sm tour-img" src="img/3.png" />
             <p class="card__title text-primary fw-lg">Bootstrap based</p>
             <p class="card__body text-tertiary">
               Startup Framework works fine on devices supporting Retina Display.
@@ -98,9 +98,9 @@
             </button>
           </div>
         </div>
-        <div class="col-12-xs col-6-md col-4-xl">
+        <div class="col-12-xs col-12-sm col-6-md col-4-xl">
           <div class="card-white b-rad-sm p-2">
-            <img class="b-rad-sm" src="img/4.png" />
+            <img class="b-rad-sm tour-img" src="img/4.png" />
             <p class="card__title text-primary fw-lg">Mozart Project</p>
             <p class="card__body text-tertiary">
               Startup Framework works fine on devices supporting Retina Display.
@@ -113,9 +113,9 @@
             </button>
           </div>
         </div>
-        <div class="col-12-xs col-6-md col-4-xl">
+        <div class="col-12-xs col-12-sm col-6-md col-4-xl">
           <div class="card-white b-rad-sm p-2">
-            <img class="b-rad-sm" src="img/5.png" />
+            <img class="b-rad-sm tour-img" src="img/5.png" />
             <p class="card__title text-primary fw-lg">Web Generator</p>
             <p class="card__body text-tertiary">
               Startup Framework works fine on devices supporting Retina Display.
@@ -128,9 +128,9 @@
             </button>
           </div>
         </div>
-        <div class="col-12-xs col-6-md col-4-xl">
+        <div class="col-12-xs col-12-sm col-6-md col-4-xl">
           <div class="card-white b-rad-sm p-2">
-            <img class="b-rad-sm" src="img/6.png" />
+            <img class="b-rad-sm tour-img" src="img/6.png" />
             <p class="card__title text-primary fw-lg">Postcards</p>
             <p class="card__body text-tertiary">
               Startup Framework works fine on devices supporting Retina Display.
