--- a/Features.html
+++ b/Features.html
@@ -66,7 +66,7 @@
 
     <div class="text-white mb-4">
       <div class="container row p-1 gap-2">
-        <div class="col-12-xs col-4-lg p-2 border-1-solid-secondary">
+        <div class="col-12-xs col-4-lg p-2 border-1-solid-green">
           <i class="fa-solid fa-bullseye"></i>
           <h4 class="font-md">Full Control</h4>
           <p class="text-tertiary-light-5">
@@ -74,7 +74,7 @@
             want. No more third party vendor lock-in
           </p>
         </div>
-        <div class="col-12-xs col-4-lg p-2 border-1-solid-secondary">
+        <div class="col-12-xs col-4-lg p-2 border-1-solid-green">
           <i class="fa-solid fa-crop"></i>
           <h4 class="font-md">For Freelancers and Agencies</h4>
           <p class="text-tertiary-light-5">
@@ -82,7 +82,7 @@
             you need; long form, presen-tations, splash sites, and more.
           </p>
         </div>
-        <div class="col-12-xs col-4-lg p-2 border-1-solid-secondary">
+        <div class="col-12-xs col-4-lg p-2 border-1-solid-green">
           <i class="fa-regular fa-gem"></i>
           <h4 class="font-md">Cmd + C / Cmd + V</h4>
           <p class="text-tertiary-light-5">
