--- a/Carousel.html
+++ b/Carousel.html
@@ -35,7 +35,7 @@
             <div class="splide__track">
               <div class="splide__list">
                 <li class="splide__slide slide">
-                  <div class="splide__content content">
+                  <div class="splide__content content active">
                     <h2>Title</h2>
                     <p>BodyText</p>
                     <button>CTA</button>
@@ -68,6 +68,11 @@
                   <img src="img/car4.jpg" />
                 </li>
                 <li class="splide__slide slide">
+                  <div class="splide__content content">
+                    <h2>Title5</h2>
+                    <p>BodyText</p>
+                    <button>CTA</button>
+                  </div>
                   <img src="img/car5.jpg" />
                 </li>
               </div>
